api/yaml/goapi.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapi
  namespace: default
  labels:
    app: goapi
spec:
  type: NodePort
  selector:
    app: goapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
