api/yaml/goapi.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  defaultBackend:
    service:
      name: goapi
      port:
        number: 8080
  rules:
    - host: goapi.local
      http:
        paths:
          - path: /goapi
            pathType: Prefix
            backend:
              service:
                name: goapi
                port:
                  number: 8080
